--- a/app/src/styles/global.css
+++ b/app/src/styles/global.css
@@ -1,15 +1,12 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  width: 100vw;
-  height: 100vh;
-}
+@import url('https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap');
 
-* {
-  box-sizing: border-box;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  text-decoration: none;
+@layer base {
+  html {
+    font-family: 'Rubik 80s Fade', cursive;
+    background-image: url('../public/y2k-bg.webp');
+  }
 }
