--- a/app/src/styles/global.css
+++ b/app/src/styles/global.css
@@ -9,4 +9,21 @@
     font-family: 'Rubik 80s Fade', cursive;
     background-image: url('../public/y2k-bg.webp');
   }
+
+  html,
+  body {
+    height: 100%;
+  }
+
+  #gallery {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  #gallery img {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 100px;
+    object-fit: cover;
+  }
 }
